--- a/signup.html
+++ b/signup.html
@@ -42,9 +42,9 @@ Some of the contest rules are hard to follow, including having the prizes listed
 </ul>
 
 <h3>Two types of registration</h3>
-<table border="1" width="60%" cellpadding="5" cellspacing="5">
+<table border="1" cellpadding="5" cellspacing="5">
 <tr>
-<td>Type</td>
+<td width="30%" >Type</td>
 <td>Notes</td>
 </tr>
 <tr>
