--- a/signup.html
+++ b/signup.html
@@ -44,8 +44,8 @@ Some of the contest rules are hard to follow, including having the prizes listed
 <h3>Two types of registration</h3>
 <table border="1" cellpadding="5" cellspacing="5">
 <tr>
-<td width="30%" >Type</td>
-<td>Notes</td>
+<td width="25%">Type</td>
+<td width="60%">Notes</td>
 </tr>
 <tr>
 <td><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a></td>
