--- a/signup.html
+++ b/signup.html
@@ -45,7 +45,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
 <table border="1" cellpadding="5" cellspacing="5">
 <tr>
 <td width="25%">Type</td>
-<td width="60%">Notes</td>
+<td>Notes</td>
 </tr>
 <tr>
 <td><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a></td>
