--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -1,1 +1,112 @@
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Sign up For RICOH Cloud API</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href=“img/favicon.ico”>
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+  </head>
+  <body>
+    <!--[if lt IE 8]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
+    <header class="lavel-up-header lavel-up-header-bg-img" data-stellar-background-ratio="0.5">
+          <!-- Logo End -->
+            <img src="img/developer_logo_white.png">
+
+          <!-- Main Title start -->
+          <h1 style="font-family:verdana;"class="lu-title">How To Sign Up for the RICOH Cloud API</h1>
+<h2 style="font-family:verdana;">Unofficial Tips and Tricks for easy signup to the contest</h2>
+<font style="font-family:verdana;">Getting the RICOH Cloud API has a few ins and outs. We've quickly documented them here, for clarity.</font>
+
+
+
+
+
+
+
+
+
+</script>
+          <!-- Main title end -->
+
+
+    </header>
+    <!-- Contact form section -->
+    <section class="lu-contact" data-stellar-background-ratio="0.5">
+      <div class="lu-overlay">
+        <div class="container">
+          <h1 class="lu-section-title text-center"><a href="https://docs.google.com/forms/d/1AYGWMSFBdv23vqbMZixZuOTAIru4EW6YSZNopzIq7Fg/viewform">
+            Ask a Question</a>
+          </h1>
+
+          <!-- <form role="form" class="lu-contact-form" method="post" action="contact.php">
+            <div class="col-md-6">
+              <div class="form-group">
+                <div class="controls">
+                  <input type="text" class="form-control" placeholder="Name" name="name">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="controls">
+                  <input type="email" class="form-control email" placeholder="Email" name="email">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="controls">
+                  <input type="text" class="form-control requiredField" placeholder="Subject" name="subject">
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <div class="controls">
+                  <textarea rows="7" class="form-control" placeholder="Message" name="message"></textarea>
+                </div>
+              </div>
+              <button type="submit" id="submit" class="btn btn-default">Send</button><div id="success" style="color:#fff;"></div>
+            </div>
+          </form> -->
+
+        </div>
+      </div>
+    </section>
+    <!-- Contact form section end -->
+
+    <footer class="lu-footer">
+      <div class="container text-center"><font style="font-size:10%;">
+        &copy; 2016 Oppkey, Inc., All Rights Reserved by Oppkey, Incorporated</font>
+      </div>
+    </footer>
+    
+    </font>
+
+
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/retina.min.js"></script>
+    <script src="js/main.js"></script>
+
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-73311422-1', 'auto');
+    ga('send', 'pageview');
+    </script>
+  </body>
+</html>
