--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
 </ul>
 
 <h3>Two types of registration</h3>
-<table border="1" cellpadding="5" cellspacing="5">
+<table border="1" cellpadding="5" cellspacing="5" width="80%">
 <tr>
 <td width="25%">Type</td>
 <td>Notes</td>
