--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
     <li>Must register with the contest by Aug 10, 7:59am, California time, but...</li>
     <li>Can submit your final app as late as Aug 31, 7:59am, California time, but...</li>
     <ul>
-    <li>Gadget submission from the US must be received by Wed, September 7, 2016.</li>
+    <li>Any physical gadget submission must be received in Tokyo by Wed, September 7</li>
     </ul>
     <li>Awards ceremoney is Nov 7</li>
   </ul>
