--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
   <li>Important Dates</li>
   <ul>
     <li>Must register with the contest by Aug 10, 7:59am, California time, but...</li>
-    <li>Can submit your final app as late as Aug 31, 7:59am, California time, but...</li>
+    <li>Must submit your final app by Aug 31, 7:59am, California time</li>
     <ul>
     <li>Any physical gadget submission must be received in Tokyo by Wed, September 7</li>
     </ul>
