--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
 Some of the contest rules are hard to follow, including having the prizes listed in yen. So we've gone through the Sign Up process and simplified it for you. This is very unofficial but hopefully useful.
 
 <ul>
-  <li>Main Page for <a href="http://contest.theta360.com/index-en.html">summary of rules and signing up</a></li>
+  <li>Main Page for <a href="http://contest.theta360.com/index-en.html" target="_blank">summary of rules and signing up</a></li>
 </ul>
 <ul>
   <li>Important Dates</li>
