--- a/signup.html
+++ b/signup.html
@@ -51,11 +51,11 @@ Some of the contest rules are hard to follow, including having the prizes listed
 <td>Notes</td>
 </tr>
 <tr>
-<td><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a></td>
+<td><a href="https://entry.contest.theta360.com/users/sign_up" target="_blank">Register for the contest</a></td>
 <td>Response can take up to 2 days</td>
 </tr>
 <tr>
-  <td><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></td>
+  <td><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/" target="_blank">Register to get access to the RICOH Cloud API</a></td>
   <td>This takes you to a "Unified Communication System" webpage to create an administrator account for managing multiple contacts, in case you're making multiple contest entries. Please note: You will get an instructions email from ricohapi-iot-register@nts.ricoh.co.jp with a link to a temporary file sharing site from Ricoh to grab your ID and secret key to the API server. Please do this WITHIN 3 days, or you'll have to ask again.</td>
 </tr>
 </table>
