--- a/signup.html
+++ b/signup.html
@@ -116,7 +116,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
     <section class="lu-contact" data-stellar-background-ratio="0.5">
       <div class="lu-overlay">
         <div class="container">
-          <h1 class="lu-section-title text-center"><a href="https://docs.google.com/forms/d/1AYGWMSFBdv23vqbMZixZuOTAIru4EW6YSZNopzIq7Fg/viewform">
+          <h1 class="lu-section-title text-center"><a href="https://docs.google.com/forms/d/1AYGWMSFBdv23vqbMZixZuOTAIru4EW6YSZNopzIq7Fg/viewform"  target="_blank">
             Ask a Question</a>
           </h1>
 
