--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -28,7 +28,20 @@
 <h2 style="font-family:verdana;">Unofficial Tips and Tricks for easy signup to the contest</h2>
 <font style="font-family:verdana;">Getting the RICOH Cloud API has a few ins and outs. We've quickly documented them here, for clarity.</font>
 
-
+<table border="1" cellpadding="5" cellspacing="5">
+<tr>
+<td width="25%">Thing you have to do</td>
+<td>Thing you have to be careful about</td>
+</tr>
+<tr>
+<td><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a></td>
+<td>Response can take up to 2 days</td>
+</tr>
+<tr>
+  <td><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></td>
+  <td>This takes you to a "Unified Communication System" webpage to create an administrator account for managing multiple contacts, in case you're making multiple contest entries. Please note: You will get an instructions email from ricohapi-iot-register@nts.ricoh.co.jp with a link to a temporary file sharing site from Ricoh to grab your ID and secret key to the API server. Please do this WITHIN 3 days, or you'll have to ask again.</td>
+</tr>
+</table>
 
 
 
@@ -45,7 +58,7 @@
     <section class="lu-contact" data-stellar-background-ratio="0.5">
       <div class="lu-overlay">
         <div class="container">
-          <h1 class="lu-section-title text-center"><a href="https://docs.google.com/forms/d/1AYGWMSFBdv23vqbMZixZuOTAIru4EW6YSZNopzIq7Fg/viewform">
+          <h1 class="lu-section-title text-center"><a href="https://docs.google.com/forms/d/1AYGWMSFBdv23vqbMZixZuOTAIru4EW6YSZNopzIq7Fg/viewform" target="_blank">
             Ask a Question</a>
           </h1>
 
