--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -28,6 +28,11 @@
 <h2 style="font-family:verdana;">Unofficial Tips and Tricks for easy signup to the contest</h2>
 <font style="font-family:verdana;">Getting the RICOH Cloud API has a few ins and outs. We've quickly documented them here, for clarity.</font>
 
+<ol>
+  <li>You went to the main contest page, you read about the details, you clicked the clickbox on terms and went over to the Entry Site</li>
+  <li>You're thinking you want to use the RICOH Cloud API (beta) to help build your IoT contest submission</li>
+  
+</ol>
 <table border="1" cellpadding="5" cellspacing="5">
 <tr>
 <td width="25%">Thing you have to do</td>
