--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -31,8 +31,9 @@
 <ol>
   <li>You went to the main contest page, you read about the details, you clicked the clickbox on terms and went over to the Entry Site</li>
   <li>You're thinking you want to use the <a href="http://docs.ricohapi.com/docs/user-account-setup-guide/" target="_blank">RICOH Cloud API (beta)</a> to help build your IoT contest submission</li>
-  
 </ol>
+<img src="img/Unified_signup.png">
+<p></p>
 <table border="1" cellpadding="5" cellspacing="5">
 <tr>
 <td width="25%">Thing you have to do</td>
