--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -34,6 +34,9 @@
 </ol>
 <img src="img/Unified_signup.png">
 <p></p>
+You'll get back the following email.
+<img src="img/Unified_admin_acct.png">
+<p></p>
 <table border="1" cellpadding="5" cellspacing="5">
 <tr>
 <td width="25%">Thing you have to do</td>
