--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -38,6 +38,10 @@ You'll get back the following email.
 <p></p>
 <img src="img/Unified_admin_acct.png">
 <p></p>
+And when you have access, you'll see this Dashboard.
+<p></p>
+<img src="img/Unified_dashboard.png">
+<p></p>
 <table border="1" cellpadding="5" cellspacing="5">
 <tr>
 <td width="25%">Thing you have to do</td>
