--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -32,7 +32,7 @@
   <li>You went to the main contest page, you read about the details, you clicked the clickbox on terms and went over to the Entry Site</li>
   <li>You're thinking you want to use the <a href="http://docs.ricohapi.com/docs/user-account-setup-guide/" target="_blank">RICOH Cloud API (beta)</a> to help build your IoT contest submission</li>
 </ol>
-<img src="img/Unified_signup.png">
+<img src="img/Unified_signup.png" border="1">
 <p></p>
 You'll get back the following email.
 <p></p>
