--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -36,11 +36,11 @@
 <p></p>
 You'll get back the following email.
 <p></p>
-<img src="img/Unified_admin_acct.png">
+<img src="img/Unified_admin_acct.png" border="1">
 <p></p>
 And when you have access, you'll see this Dashboard.
 <p></p>
-<img src="img/Unified_dashboard.png">
+<img src="img/Unified_dashboard.png" border="1">
 <p></p>
 <table border="1" cellpadding="5" cellspacing="5">
 <tr>
