--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -32,6 +32,7 @@
   <li>You went to the main contest page, you read about the details, you clicked the clickbox on terms and went over to the Entry Site</li>
   <li>You're thinking you want to use the <a href="http://docs.ricohapi.com/docs/user-account-setup-guide/" target="_blank">RICOH Cloud API (beta)</a> to help build your IoT contest submission</li>
   <li>The quickest way to do this is fill out the <a href="https://entry.contest.theta360.com/users/sign_up" target="_blank">Entry Site</a>. Make sure you click Yes to the question "Would you like to use RICOH Cloud API (beta version)?"</li>
+<img src="img/click_yes_for_api.png">
 </ol>
 <img src="img/Unified_signup.png" border="1">
 <p></p>
