--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -34,6 +34,7 @@
   <li>The quickest way to do this is fill out the <a href="https://entry.contest.theta360.com/users/sign_up" target="_blank">Entry Site</a>. Make sure you click Yes to the question "Would you like to use RICOH Cloud API (beta version)?"</li>
 <img src="img/click_yes_for_api.png" border="1">
 <li>You will get TWO emails, one with the ClientID, one with the password. It's a temporary site that houses your credentials only for 3 days. Go get your credentials NOW. Otherwise, you'll have to ask again later.</li>
+<img src="img/api_credentials_email.png" border="1">
 </ol>
 <img src="img/Unified_signup.png" border="1">
 <p></p>
