--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -36,7 +36,7 @@
 <li>You will get TWO emails, one with the ClientID, one with the password. It's a temporary site that houses your credentials only for 3 days. Go get your credentials NOW. Otherwise, you'll have to ask again later.</li>
 <img src="img/api_credentials_email.png" border="1">
 <li>When you click over to the site and login, you'll see Japanese test and a clear document icon and link. This is the download link. Please download the small text file with your RICOH Cloud API (beta version) credentials here.</li>
-<img src="img/API-keys.png" border="1">
+<img src="img/api_keys.png" border="1">
 </ol>
 <img src="img/Unified_signup.png" border="1">
 <p></p>
