--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -34,9 +34,9 @@
   <li>The quickest way to do this is fill out the <a href="https://entry.contest.theta360.com/users/sign_up" target="_blank">Entry Site</a>. Make sure you click Yes to the question "Would you like to use RICOH Cloud API (beta version)?"</li>
 <p><img src="img/click_yes_for_api.png" border="1"></p>
 <li>You will get TWO emails, one with the ClientID, one with the password. It's a temporary site that houses your credentials only for 3 days. Go get your credentials NOW. Otherwise, you'll have to ask again later.</li>
-<img src="img/api_credentials_email.png" border="1">
+<p><img src="img/api_credentials_email.png" border="1"></p>
 <li>When you click over to the site and login, you'll see Japanese test and a clear document icon and link. This is the download link. Please download the small text file with your RICOH Cloud API (beta version) credentials here.</li>
-<img src="img/api_keys.png" border="1">
+<p><img src="img/api_keys.png" border="1"></p>
 <li>You should be good to go! See below for a little help managing your API keys through the RICOH "Unified Communication System" webpage</li>
 <li>We have gotten a few errors through the credentials page. If you see the following, you're running into the same problems we had:</li>
 <ul>
