--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -37,13 +37,16 @@
 <p><img src="img/api_credentials_email.png" border="1"></p>
 <li>When you click over to the site and login, you'll see Japanese test and a clear document icon and link. This is the download link. Please download the small text file with your RICOH Cloud API (beta version) credentials here.</li>
 <p><img src="img/api_keys.png" border="1"></p>
-<li>You should be good to go! See below for a little help managing your API keys through the RICOH "Unified Communication System" webpage</li>
+<li>You should be good to go!</li>
 <li>We have gotten a few errors through the credentials page. If you see the following, you're running into the same problems we had:</li>
 <ul>
   <li>エラー 404  HTTP Web Server: 例外 - Lotus Notes の例外 - エントリが索引に見つかりません</li>
   <li>This says "Error 404 HTTP Web Server: Exception - Lotus Notes Exception - Entry not found"</li>
 </ul>
 </ol>
+
+<h3>Managing Your RICOH Cloud API (beta version)</h3>
+<p>This section is currently incomplete. (April 26, 2016) We've logged in and created our accounts, but we're not activitely managing our API keys yet. We've included a few initial screenshots, but we intend to be back with more information soon.</p>
 <img src="img/Unified_signup.png" border="1">
 <p></p>
 You'll get back the following email.
@@ -54,27 +57,6 @@ And when you have access, you'll see this Dashboard.
 <p></p>
 <img src="img/Unified_dashboard.png" border="1">
 <p></p>
-
-
-<table border="1" cellpadding="5" cellspacing="5">
-<tr>
-<td width="25%">Thing you have to do</td>
-<td>Thing you have to be careful about</td>
-</tr>
-<tr>
-<td><a href="https://entry.contest.theta360.com/users/sign_up">Register for the contest</a></td>
-<td>Response can take up to 2 days</td>
-</tr>
-<tr>
-  <td><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/">Register to get access to the RICOH Cloud API</a></td>
-  <td>This takes you to a "Unified Communication System" webpage to create an administrator account for managing multiple contacts, in case you're making multiple contest entries. Please note: You will get an instructions email from ricohapi-iot-register@nts.ricoh.co.jp with a link to a temporary file sharing site from Ricoh to grab your ID and secret key to the API server. Please do this WITHIN 3 days, or you'll have to ask again.</td>
-</tr>
-</table>
-
-
-
-
-
 
 
 </script>
