--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -28,7 +28,7 @@
 <h2 style="font-family:verdana;">Unofficial Tips and Tricks for easy signup to the contest</h2>
 <font style="font-family:verdana;">Getting the RICOH Cloud API has a few ins and outs. We've quickly documented them here, for clarity.</font>
 
-<ol>
+<ol  style="font-family:verdana;">
   <li>You went to the main contest page, you read about the details, you clicked the clickbox on terms and went over to the Entry Site</li>
   <li>You're thinking you want to use the <a href="http://docs.ricohapi.com/docs/user-account-setup-guide/" target="_blank">RICOH Cloud API (beta)</a> to help build your IoT contest submission</li>
   <li>The quickest way to do this is fill out the <a href="https://entry.contest.theta360.com/users/sign_up" target="_blank">Entry Site</a>. Make sure you click Yes to the question "Would you like to use RICOH Cloud API (beta version)?"</li>
