--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -45,8 +45,8 @@
 </ul>
 </ol>
 
-<h3>Managing Your RICOH Cloud API (beta version)</h3>
-<p>This section is currently incomplete. (April 26, 2016) We've logged in and created our accounts, but we're not activitely managing our API keys yet. We've included a few initial screenshots, but we intend to be back with more information soon.</p>
+<h3  style="font-family:verdana;">Managing Your RICOH Cloud API (beta version)</h3>
+<p  style="font-family:verdana;">This section is currently incomplete. (April 26, 2016) We've logged in and created our accounts, but we're not activitely managing our API keys yet. We've included a few initial screenshots, but we intend to be back with more information soon.</p>
 <img src="img/Unified_signup.png" border="1">
 <p></p>
 You'll get back the following email.
