--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -48,14 +48,16 @@
 <h3  style="font-family:verdana;">Managing Your RICOH Cloud API (beta version)</h3>
 <p  style="font-family:verdana;">This section is currently incomplete. (April 26, 2016) We've logged in and created our accounts, but we're not activitely managing our API keys yet. We've included a few initial screenshots, but we intend to be back with more information soon.</p>
 <img src="img/Unified_signup.png" border="1">
-<p></p>
-You'll get back the following email.
+<ul style="font-family:verdana;">
+  
+<li>You'll get back the following email.</li>
 <p></p>
 <img src="img/Unified_admin_acct.png" border="1">
 <p></p>
-And when you have access, you'll see this Dashboard.
+<li>And when you have access, you'll see this Dashboard.</li>
 <p></p>
 <img src="img/Unified_dashboard.png" border="1">
+</ul>
 <p></p>
 
 
