--- a/signup.html
+++ b/signup.html
@@ -52,11 +52,11 @@ Some of the contest rules are hard to follow, including having the prizes listed
 </tr>
 <tr>
 <td><a href="https://entry.contest.theta360.com/users/sign_up" target="_blank">Register for the contest</a></td>
-<td>Response can take up to 2 days</td>
+<td>Response can take up to 2 days. You can sign up for the RICOH Cloud API (beta version) at the same time. <a href="signup_cloudapi.html">Some details here</a>.</td>
 </tr>
 <tr>
   <td><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/" target="_blank">Register to get access to the RICOH Cloud API</a></td>
-  <td>This takes you to a "Unified Communication System" webpage to create an administrator account for managing multiple contacts, in case you're making multiple contest entries. Please note: You will get two emails from RICOH, one with a LoginID and one with a password. Clicking on the link will get you to a temporary file sharing site from Ricoh to grab your ID and secret key to the API server. Please do this WITHIN 3 days, or you'll have to ask again.</td>
+  <td>This takes you to a "Unified Communication System" webpage to create an administrator account for managing multiple contacts.</td>
 </tr>
 </table>
 
