--- a/signup.html
+++ b/signup.html
@@ -56,7 +56,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
 </tr>
 <tr>
   <td><a href="http://docs.ricohapi.com/docs/user-account-setup-guide/" target="_blank">Register to get access to the RICOH Cloud API</a></td>
-  <td>This takes you to a "Unified Communication System" webpage to create an administrator account for managing multiple contacts.</td>
+  <td>This takes you to a "Unified Communication System" webpage to create an administrator account for managing multiple your API keys.</td>
 </tr>
 </table>
 
