--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -42,6 +42,7 @@
 <ul>
   <li>エラー 404  HTTP Web Server: 例外 - Lotus Notes の例外 - エントリが索引に見つかりません</li>
   <li>This says "Error 404 HTTP Web Server: Exception - Lotus Notes Exception - Entry not found"</li>
+  <li>If you're getting this message, you need to send an email to <a href="mailto:support@contest.theta360.com" target="_blank">support@contest.theta360.com</a></li>
 </ul>
 </ol>
 
