--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -38,7 +38,7 @@
 <li>When you click over to the site and login, you'll see Japanese test and a clear document icon and link. This is the download link. Please download the small text file with your RICOH Cloud API (beta version) credentials here.</li>
 <p><img src="img/api_keys.png" border="1"></p>
 <li>You should be good to go!</li>
-<li>We have gotten a few errors through the credentials page. If you see the following, you're running into the same problems we had:</li>
+<li>We have gotten a few errors through the credentials page. If you see the following, you're running into the same problems we had when we tried to login too quickly. Remember, the emails says you have to wait 30 minutes!</li>
 <ul>
   <li>エラー 404  HTTP Web Server: 例外 - Lotus Notes の例外 - エントリが索引に見つかりません</li>
   <li>This says "Error 404 HTTP Web Server: Exception - Lotus Notes Exception - Entry not found"</li>
