--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -35,7 +35,9 @@
 <p><img src="img/click_yes_for_api.png" border="1"></p>
 <li>You will get TWO emails, one with the ClientID, one with the password. It's a temporary site that houses your credentials only for 3 days. Go get your credentials NOW. Otherwise, you'll have to ask again later.</li>
 <p><img src="img/api_credentials_email.png" border="1"></p>
-<li>When you click over to the site and login, you'll see Japanese test and a clear document icon and link. This is the download link. Please download the small text file with your RICOH Cloud API (beta version) credentials here.</li>
+<li>When you click over to the site and login, you'll first see a download page with some Japanese text. The link is pretty clear.</li>
+<p><img src="img/api_download_page.png" border="1"></p>
+<li>Finally, you'll get to the download link. There's some Japanese text and a clear document icon and link. It's just a small text file with your RICOH Cloud API (beta version) credentials.</li>
 <p><img src="img/api_keys.png" border="1"></p>
 <li>You should be good to go!</li>
 <li>We have gotten a few errors through the credentials page. If you see the following, you're running into the same problems we had when we tried to login too quickly. Remember, the emails says you have to wait 30 minutes!</li>
