--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -36,7 +36,7 @@
 <li>You will get TWO emails, one with the ClientID, one with the password. It's a temporary site that houses your credentials only for 3 days. Go get your credentials NOW. Otherwise, you'll have to ask again later.</li>
 <p><img src="img/api_credentials_email.png" border="1"></p>
 <li>When you click over to the site and login, you'll first see a download page with some Japanese text. The link is pretty clear.</li>
-<p><img src="img/api_download_page.png" border="1"></p>
+<p><img src="img/api_download.png" border="1"></p>
 <li>Finally, you'll get to the download link. There's some Japanese text and a clear document icon and link. It's just a small text file with your RICOH Cloud API (beta version) credentials.</li>
 <p><img src="img/api_keys.png" border="1"></p>
 <li>You should be good to go!</li>
