--- a/signup_cloudapi.html
+++ b/signup_cloudapi.html
@@ -40,11 +40,11 @@
 <li>Finally, you'll get to the download link. There's some Japanese text and a clear document icon and link. It's just a small text file with your RICOH Cloud API (beta version) credentials.</li>
 <p><img src="img/api_keys.png" border="1"></p>
 <li>You should be good to go!</li>
-<li>We have gotten a few errors through the credentials page. If you see the following, you're running into the same problems we had when we tried to login too quickly. Remember, the emails says you have to wait 30 minutes!</li>
+<li>We have gotten a few errors through the credentials page. If you see the following, you're running into the same problems we had when we tried to login too quickly. Remember, the emails say you have to wait 30 minutes!</li>
 <ul>
   <li>エラー 404  HTTP Web Server: 例外 - Lotus Notes の例外 - エントリが索引に見つかりません</li>
   <li>This says "Error 404 HTTP Web Server: Exception - Lotus Notes Exception - Entry not found"</li>
-  <li>If you're getting this message, you need to send an email to <a href="mailto:support@contest.theta360.com" target="_blank">support@contest.theta360.com</a></li>
+  <li>If you're getting this message, you need to send an email to <a href="mailto:support@contest.theta360.com" target="_blank">support@contest.theta360.com</a>. We did this and got a response by the next day, so not too bad at all, but not instantly.</li>
 </ul>
 </ol>
 
