--- a/signup.html
+++ b/signup.html
@@ -104,6 +104,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
     <li>Types of APIs utilized</li>
     <li>Types of Gadgets utilized</li>
     <li>Note: If your submission is a physical gadget, you need to send the gadget to RICOH. Gadget submission from the US must be received by Wed, September 7, 2016.</li>
+    <li>Also note: Physical gadget submissions with NOT be returned.</li>
   </ul>
 </ul>
 
