--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,7 @@ Some of the contest rules are hard to follow, including having the prizes listed
     <ul>
     <li>Any physical gadget submission must be received in Tokyo by Wed, September 7</li>
     </ul>
-    <li>Awards ceremoney is Nov 7</li>
+    <li>Awards ceremony is Nov 7</li>
   </ul>
 </ul>
 
