--- a/signup.html
+++ b/signup.html
@@ -103,8 +103,10 @@ Some of the contest rules are hard to follow, including having the prizes listed
     <li>URL where published (Google Play, App Store, Windows Store and/or other websites)</li>
     <li>Types of APIs utilized</li>
     <li>Types of Gadgets utilized</li>
+    <ul>
     <li>Note: If your submission is a physical gadget, you need to send the gadget to RICOH. Gadget submission from the US must be received by Wed, September 7, 2016.</li>
-    <li>Also note: Physical gadget submissions with NOT be returned.</li>
+    <li>Also note: Physical gadget submissions with not be returned.</li>
+    </ul>
   </ul>
 </ul>
 
